syntax = "proto3";

package notification;

service NotificationService {
  rpc SendNotification (SendNotificationRequest) returns (NotificationResponse);
  rpc GetNotification (GetNotificationRequest) returns (NotificationResponse);
  rpc ListNotifications (ListNotificationsRequest) returns (ListNotificationsResponse);
  rpc MarkAsRead (MarkAsReadRequest) returns (NotificationResponse);
}

message SendNotificationRequest {
  string user_id = 1;
  string type = 2;
  string title = 3;
  string message = 4;
  string metadata = 5;
}

message GetNotificationRequest {
  string notification_id = 1;
}

message ListNotificationsRequest {
  string user_id = 1;
}

message MarkAsReadRequest {
  string notification_id = 1;
}

message NotificationResponse {
  bool success = 1;
  string message = 2;
  Notification notification = 3;
}

message ListNotificationsResponse {
  repeated Notification notifications = 1;
}

message Notification {
  string id = 1;
  string user_id = 2;
  string type = 3;
  string title = 4;
  string message = 5;
  string metadata = 6;
  bool is_read = 7;
  string created_at = 8;
  string updated_at = 9;
}
